# recode

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  AUTHORS  Makefile.am  NEWS  README.org  bootstrap.conf  configure.ac  tables.py
.github/workflows/: c-cpp.yml
build-aux/: .gitignore  invert-l-to-h  libiconv-configure.gnu
contrib/: Makefile.am  recode.el
doc/: Makefile.am  recode.texi  version.texi
keld/: charsets.def
lib/: .gitignore
m4/: .gitignore
po/: .gitignore  be.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  recode.pot  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
src/: Makefile.am  african.c  afrtran.c  ansellat1.l  ascilat1.l  atarist.c  bangbang.c  base64.c  base64.h  btexlat1.l  cdcnos.c  charname.c  cleaner.h  combine.c  common.h  dump.c  ebcdic.c  endline.c  flat.c  fr-charname.c  html.c  ibmpc.c  iconqnx.c  iconv.c  iconv.h  iso5426lat1.l  java.c  lat1ansel.c  lat1asci.c  lat1btex.c  lat1iso5426.c  lat1ltex.c  lat1txte.c  ltexlat1.l  main.c  mergelex.py  mixed.c  mule.c  names.c  outer.c  (+18 more)
tests/: Makefile.am  Recode.pyx  asan-suppressions.txt  common.py  pytest  setup.py.in  t21_names.py  t25_subsets.py  t40_html.py  t40_java.py  t70_inferenz.py  t90_bigauto.py
